@@ -1175,6 +1175,7 @@
 74) kernel: net: ipv6: update flowi6_oif in ip6_dst_lookup_flow if not set.<br>
 75) kernel: jump_label: Rename JUMP_LABEL_{EN,DIS}ABLE to JUMP_LABEL_{JMP,NOP}.<br>
 76) kenrel: jump_label: locking/static_keys: Rename JUMP_LABEL_TYPE_* and related helpers to the static_key* pattern.<br>
+77) kernel: jump_label: Add jump_entry_key() helper.<br>
 <br>
 <br>
 <b>TODO:</b><br>
